admin subscription action page incomplete

--- a/recruit-gui/src/app/accounts/accounts.component.css
+++ b/recruit-gui/src/app/accounts/accounts.component.css
@@ -7,9 +7,16 @@
 }
 
 h3{
+	margin-top:5px;
 	margin-left:15px;
+	color:#6A5ACD;
 }
 
 .control-spacing{
 	margin-left:20px;
+}
+
+.btn-subscription-action{
+	margin-right:10px;
+    min-width:100px;
 }
