--- a/recruit-gui/src/app/accounts/accounts.component.css
+++ b/recruit-gui/src/app/accounts/accounts.component.css
@@ -20,3 +20,25 @@ h3{
 	margin-right:10px;
     min-width:100px;
 }
+
+.modal-header{
+     background:#181414;
+     color:#6A5ACD;
+     font-weight:bold;
+ }
+
+.filter-close-box{
+     padding:10px;
+     cursor:pointer;
+     font-size:20px;
+     font-weight: bold;
+ }
+ 
+.modal-body{
+	min-height:150px;
+}
+
+.feedback-label{
+    font-size:12px;
+    font-weight:bold;
+}
