--- a/recruit-gui/src/app/app.component.html
+++ b/recruit-gui/src/app/app.component.html
@@ -14,7 +14,7 @@
 		<li  class="li-arenella-nav" *ngIf="!isAuthenticated()">
            <a  class="dropdown-item" routerLink="/about">About</a>
         </li>
-		<li  class="li-arenella-nav"  *ngIf="isAuthenticated() && !isRecruiterNoSubscription()">	
+		<li  class="li-arenella-nav"  *ngIf="isAuthenticated() && !isRecruiterNoSubscription() && !hasUnpaidSubscription()">	
            <a  class="dropdown-item" routerLink="/view-candidates">Candidates</a>
         </li>
         <li  class="li-arenella-nav" *ngIf="isAuthenticatedAsAdmin()">
@@ -35,7 +35,7 @@
 		<li class="li-arenella-nav" *ngIf="isAuthenticated() && !isAuthenticatedAsAdmin()">
            <a class="dropdown-item recruiter-account" routerLink="/recruiter-account">Manage Account</a>
         </li>
-		<li class="li-arenella-nav" *ngIf="isAuthenticated() && !isAuthenticatedAsAdmin() && !isRecruiterNoSubscription()">
+		<li class="li-arenella-nav" *ngIf="isAuthenticated() && !isAuthenticatedAsAdmin() && !isRecruiterNoSubscription() && !hasUnpaidSubscription()">
            <a class="dropdown-item recruiter-account" routerLink="/recruiter-listings">Manage Job Listings</a>
         </li>
 
