--- a/recruit-gui/src/app/recruiter-account/recruiter-account.component.html
+++ b/recruit-gui/src/app/recruiter-account/recruiter-account.component.html
@@ -2,7 +2,7 @@
 	
 	<!-- Nav options -->
 	<ul class="nav nav-tabs">
-	  <li class="nav-item" *ngIf="!isRecruiterNoSubscription()">
+	  <li class="nav-item" *ngIf="!isRecruiterNoSubscription() && !hasUnpaidSubscription()">
 	    <span class="nav-link tabNav" (click)="switchTab('showAccountDetails')">Account Details</span>
 	  </li>
 	  <li class="nav-item">
