refactor of suggestions

--- a/recruit-gui/src/app/recruiter-signup/recruiter-signup.component.html
+++ b/recruit-gui/src/app/recruiter-signup/recruiter-signup.component.html
@@ -31,6 +31,14 @@
 					</td>
 				</tr>
 				<tr>
+					<td colspan="2" style="max-width:400px; padding-top:10px; font-style:italic; font-size:12px;">
+					By registering you are agreeing to your information being stored in the system. 
+					Your data will not be shared with third parties.
+					Your activity in the site will be stored internally to provide statistics and 
+					to improve your user experience.
+					</td>
+				</tr>
+				<tr>
 					<td></td>
 					<td>
 						<button (click)="startFreeTrial()" [disabled]="isFreeTrialButtonEnabled()" style="margin-top:10px;float:right;">Start free trial</button>
