--- a/recruit-gui/src/app/recruiter-listings/recruiter-listings.component.html
+++ b/recruit-gui/src/app/recruiter-listings/recruiter-listings.component.html
@@ -336,7 +336,7 @@
 				<tr>
 					<td style="font-weight:bold">Language Match</td>
 					<td style="border:1px black solid; background:white;padding:2px;margin:2px;">
-						<div class="perception-{{suggestedCandidate.accuracyLanguages}}">&nbsp;</div>
+						<div class="perception-{{suggestedCandidate.accuracyLanguages}}">{{suggestedCandidate.accuracyLanguages}}&nbsp;</div>
 					</td>
 				</tr>
 				<tr>
