--- a/recruit-gui/src/app/recruiter-listings/recruiter-listings.component.html
+++ b/recruit-gui/src/app/recruiter-listings/recruiter-listings.component.html
@@ -335,13 +335,13 @@
 				</tr>
 				<tr>
 					<td style="font-weight:bold">Skill Match</td>
-					<td style="border:1px black solid; background:white;padding:2px;margin:2px;">
+					<td style="border:1px black solid; background:white;padding:2px;margin:2px;width:200px;">
 						<div  class="perception-{{suggestedCandidate.accuracySkills}}">&nbsp;</div>
 					</td>
 				</tr>
 				<tr>
 					<td style="font-weight:bold">Language Match</td>
-					<td style="border:1px black solid; background:white;padding:2px;margin:2px;">
+					<td style="border:1px black solid; background:white;padding:2px;margin:2px;width:200px;">
 						<div class="perception-{{suggestedCandidate.accuracyLanguages}}">&nbsp;</div>
 					</td>
 				</tr>
@@ -356,6 +356,9 @@
 	
 	    <div style="margin-right:20px;margin-top:10px;border-top:1px solid black;padding:10px;width:100%;text-align:right;">
 	    
+	    	<button *ngIf="!suggestedCandidate.flaggedAsUnavailable" class="btn btn-secondary btn-action" (click)="markCandidateAsUnavailable()" style="margin-right:10px;" title="If the candidtae is no longer available use this button to let us know and we will remove them form the system.">Flag as unavailable</button>
+	    	<button *ngIf="suggestedCandidate.flaggedAsUnavailable" disabled class="btn btn-secondary btn-action" style="margin-right:10px;background:red;">Flaged as unavailable</button>
+	    	
 	    	<a class="currliculum-link" href="{{getCurriculumDownloadUrl(suggestedCandidate.candidateId)}}" >
 	    		<button class="btn btn-secondary btn-action" style="margin-right:10px;" >Download CV</button>
 	    	</a>
